--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -99,12 +99,12 @@ There are two possible scenarios depending if Ants-Review integrates an existing
 \begin{figure}
 \centering
 \includegraphics[scale=0.28]{AntsReview}
-\caption{\textbf{a} is the core contract of the protocol, it implements a bounty system with the functions listed.
-\textbf{b} is the module inherited by AntsReview, that manages the access control of the protocol, adding and removing issuers and peer-reviewers.
-\textbf{c} is the native token used in the protocol that inherits the \textbf{d} contract from OpenZeppelin. It's linked to \textbf{a} and to \textbf{e}, to be wrapped into \emph{zkANTS} to implement private \emph{ANTS} transactions on Ethereum.
-\textbf{f} represents the integration with IPFS to upload the paper, requirements and peer-reviews and store the hash as \emph{proof of existence} into AntsReview.
-\textbf{g} represents the integration with De-Fi services like \emph{Dai} and \emph{Chai}, to be used as tokens in the protocol.
-\textbf{h} is the library used by the protocol for secure contract development, with the modules listed.}
+\caption{\textbf{a} The core contract of the protocol, it implements a bounty system with the functions listed.
+\textbf{b} The module inherited by AntsReview, that manages the access control of the protocol, adding and removing issuers and peer-reviewers.
+\textbf{c} The native token used in the protocol that inherits the \textbf{d} contract from OpenZeppelin. It's linked to \textbf{a} and to \textbf{e}, to be wrapped into \emph{zkANTS} to implement private \emph{ANTS} transactions on Ethereum.
+\textbf{f} Represents the integration with IPFS to upload the paper, requirements and peer-reviews and store the hash as \emph{proof of existence} into AntsReview.
+\textbf{g} Represents the integration with De-Fi services like \emph{Dai} and \emph{Chai}, to be used as tokens in the protocol.
+\textbf{h} The library used by the protocol for secure contract development, with the modules listed.}
 \label{fig:contracts}
 \end{figure}
 
