--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -118,19 +118,22 @@ In the following sections we describe the architecture of the system and its bui
 \end{itemize}
 
 \subsubsection{AntsReview}
-AntsReview is the core of the smart contracts written in Solidity \cite{Solidity}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine (EVM), deployed on Ethereum Rinkeby's Testnet \cite{Rinkeby}.
-\newline It implements a bounty-like system (AntReview) where an issuer (author or editor) is asked a series of actions to ensure transparency and consistency for the AntReview that he/she is creating:
+AntsReview (See Figure \ref{fig:contracts}) is the core of the smart contracts written in Solidity \cite{Solidity}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine (EVM), deployed on Ethereum Rinkeby's Testnet \cite{Rinkeby}.
+\newline It implements a bounty-like system (AntReview) where Alice (issuer, author or editor) can issue an AntReview with the function \emph{issueAntReview()}, where is asked a series of actions to ensure transparency and consistency for the AntReview that she is creating:
 \begin{itemize}
-  \item to upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS}.
+  \item to upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS}, a peer-to-peer hypermedia protocol for storing data in a distributed file system, and specify the IPFS Hash to be stored in the Ethereum Blockchain as \emph{proof of existence}, a notarization process by wich a document hash is timestamped into the block of Ethereum where the transaction take place, that allow manual verification of the existence of the document.
   \item to specify a deadline in the form of a unix timestamp after which the fulfillment will no longer be accepted.
-  \item to send the amount of Ether for the reward.
+  \item to specify the amount of Ether for the reward, to be stored in the contract balance.
 \end{itemize}
+
+\newline Bob (peer-reviewer) after downloading the file with Alice's paper and requirements, leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer, can submit a peer-review by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, specifying the AntReview Identifier as well as the IPFS Hash of the peer-review uploaded on IPFS.
+\newline Alice can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, specifying the AntReview Identifier as well as the peer-review identifier, that will transfer the reward specified for the AntReview from the contract to Bob.
 
 AntsReviewRoles, to ensure integrity of the system, implements an access management, leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library \cite{OZ}, through the creation of the Issuer and Peer-Reviewer Roles.
 \newline It also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is the Owner of the smart contracts, able to pause (or unpause) the functions in case of a security emergency, like an attack to the smart contracts. In this way, only the Issuer can create a new AntReview.
 \newline Once created, an AntReview is available to be fulfilled by Peer-Reviewers, uploading the peer-review on IPFS before the deadline.When the AntReview is accepted by the Issuer, the bounty is paid among Peer-Reviewers.On top of that, the Issuer can cancel the AntReview at any time and withdraw the amount of Ether staked.
 \newline One of the key aspects of the protocol is the concept of Proof of Existence, introduced by Stuart Haber \& W. Scott Stornetta \cite{TimeStamp-Haber}. Pioneers of the blockchain, cited by the Bitcoin whitepaper\cite{Bitcoin}, they were on a mission to solve the problem of immutability of digital records that became reality with the Blockchain and Bitcoin as its first application. In Ethereum \cite{Ethereum} the concept of immutability is achieved via the blockchain and the proof of work consensus algorithm by a chain of timestamped block merkle tree root hashes that are secured by miners competing computations.
-\newline Ants-Review exploits the advantages of storing the hashes of the peer-reviews into a Merkle Tree \cite{BayerHaber1992} to achieve immutability and efficiency in verifying the data with a complexity of O(logn) for searching through the tree.
+\newline Ants-Review is evaluating the advantages of storing the hashes of the peer-reviews into a Merkle Tree \cite{BayerHaber1992} to achieve immutability and efficiency in verifying the data with a complexity of O(logn) for searching through the tree.
 \newline A Merkle tree is a particular type of binary tree, formed by a set of nodes with a large set of leaf nodes at the bottom of the tree representing the hash of the original data, a set of intermediate nodes where each node is the sum of the two children hashes, ending with a single root hash. In order to verify if a specific hash is included into a Merkle Tree by leveraging on \emph{MerkleProof.sol} (OpenZeppelin Library), we need to provide a proof, generated from the leaf of interest, that represents the ramification derived from the leaf, the root hash and, finally, the leaf we want to verify.
 \newline The paper and peer-review documents will be included into a Merkle Tree by hashing the data using keccak256, a cryptographic hashing algorithm available in Solidity.
 
