--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -121,13 +121,14 @@ In the following sections we describe the architecture of the system and its bui
 AntsReview (See Figure \ref{fig:contracts}) is the core of the smart contracts written in Solidity \cite{Solidity}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine (EVM), deployed on Ethereum Rinkeby's Testnet \cite{Rinkeby}.
 \newline It implements a bounty-like system where Alice (issuer, author or editor) can issue an AntReview with the function \emph{issueAntReview()}, where is asked a series of actions to ensure transparency and consistency for the AntReview that she is creating:
 \begin{itemize}
-  \item to upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS}, a peer-to-peer hypermedia protocol for storing data in a distributed file system, and specify the IPFS Hash to be stored in the Ethereum Blockchain as \emph{proof of existence}, a notarization process by wich a document hash is timestamped into the block of Ethereum where the transaction take place, that allow manual verification of the existence of the document.
+  \item to upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS}, a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet, and specify the IPFS Hash to be stored in the Ethereum Blockchain as \emph{proof of existence}, a notarization process by wich a document hash is timestamped into the block of Ethereum where the transaction take place, that allow manual verification of the existence of the document.
   \item to specify a deadline in the form of a unix timestamp after which the fulfillment will no longer be accepted.
   \item to specify the amount of Ether for the reward, to be stored in the contract balance.
 \end{itemize}
 
 \newline Bob (peer-reviewer) after downloading the file with Alice's paper and requirements, leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer, can submit a peer-review by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, specifying the AntReview Identifier as well as the IPFS Hash of the peer-review uploaded on IPFS.
 \newline Alice can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, specifying the AntReview Identifier as well as the peer-review identifier, that will transfer the reward specified for the AntReview from the contract to Bob.
+\newline If Alice doen't receive any peer-review, she can cancel the AntReview with the function \emph{cancelAntReview}, specifying the AntReview Identifier, and the contract will transfer the reward for the AntReview back to Alice.
 
 AntsReviewRoles, to ensure integrity of the system, implements an access management, leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library \cite{OZ}, through the creation of the Issuer and Peer-Reviewer Roles.
 \newline It also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is the Owner of the smart contracts, able to pause (or unpause) the functions in case of a security emergency, like an attack to the smart contracts. In this way, only the Issuer can create a new AntReview.
