--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -128,7 +128,7 @@ AntsReview (See Figure \ref{fig:contracts}) is the core of the smart contracts w
 
 \newline Bob (peer-reviewer) after downloading the file with Alice's paper and requirements, leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer, can submit a peer-review by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, specifying the AntReview Identifier as well as the IPFS Hash of the peer-review uploaded on IPFS.
 \newline Alice can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, specifying the AntReview Identifier as well as the peer-review identifier, that will transfer the reward specified for the AntReview from the contract to Bob.
-\newline If Alice doen't receive any peer-review, she can cancel the AntReview with the function \emph{cancelAntReview}, specifying the AntReview Identifier, and the contract will transfer the reward for the AntReview back to Alice.
+\newline If Alice doen't receive any peer-review, she can cancel the AntReview with the function \emph{cancelAntReview()}, specifying the AntReview Identifier, and the contract will transfer the reward for the AntReview back to Alice.
 
 AntsReviewRoles, to ensure integrity of the system, implements an access management, leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library \cite{OZ}, through the creation of the Issuer and Peer-Reviewer Roles.
 \newline It also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is the Owner of the smart contracts, able to pause (or unpause) the functions in case of a security emergency, like an attack to the smart contracts. In this way, only the Issuer can create a new AntReview.
