--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -142,7 +142,7 @@ AntsReview integrates few tokens, each of which plays an integral role in the fu
 \newline ANTS, is the primary protocol token and can be staked into an AntReview.
 \newline ANTS is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
 \newline zkANTS, is an Ants-Review token wrapped into AZTEC Protocol \cite{AZTEC} ZK-SNARKs, that will be extended to PLONK \cite{PLONK} Proof to collapse the gas costs of private transactions on mainnet.
-\newline zkANTS will be implemented via AZTEC 2.0 (still in development) that will allow to securely wrap the Ants-Review Token into zkANTS, allowing private transactions on mainnet and preserving the anonymity of Peer Reviewers.
+\newline zkANTS will be implemented via AZTEC Protocol 2.0 (not yet released) that will allow to securely wrap the Ants-Review Token into zkANTS, allowing private transactions on mainnet and preserving the anonymity of Peer Reviewers.
 
 \subsubsection{Privacy}
 The anonymity of an agent in the system is achieved in two ways:
