--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -139,10 +139,11 @@ AntsReviewRoles, to ensure integrity of the system, implements an access managem
 
 \subsubsection{Tokenomics}
 AntsReview integrates few tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
-\newline ANTS, is the primary protocol token and can be staked into an AntReview.
+\newline ANTS, is the primary protocol ERC20 token and can be staked into an AntReview.
 \newline ANTS is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-\newline zkANTS, is an Ants-Review token wrapped into AZTEC Protocol \cite{AZTEC} ZK-SNARKs, that will be extended to PLONK \cite{PLONK} Proof to collapse the gas costs of private transactions on mainnet.
-\newline zkANTS will be implemented via AZTEC Protocol 2.0 (not yet released) that will allow to securely wrap the Ants-Review Token into zkANTS, allowing private transactions on mainnet and preserving the anonymity of Peer Reviewers.
+\newline zkANTS, is a wrapper of ANTS that will be used inside the protocol to allow private transactions on mainnet among the agents, preserving their anonimity as well as the amount of the AntReview reward and the contributions by the Anters (members of Ants-Review Community).
+\newline zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine \emph{ACE.sol}, a contract responsible for for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token, that follows the EIP-1724 standard \footnote{\url{https://github.com/ethereum/EIPs/issues/1724}} will be used as template to build an AZTEC-compatible asset.
+\newline To optimize and scale transactions, AZTEC Protocol ZK-SNARKs, will be extended in the future to PLONK \cite{PLONK} to collapse the gas costs of private transactions on mainnet.
 
 \subsubsection{Privacy}
 The anonymity of an agent in the system is achieved in two ways:
@@ -162,7 +163,7 @@ The anonymity of an agent in the system is achieved in two ways:
 \section{Discussions}
 In this session we discuss future developments not yet implemented and implications of AntsReview.
 \subsection{Possible developments}
-An AntReview, issued by an author would be seen as a poll, a container where Anters (members of the Ants-Review Community) can stake Ether or ERC20 tokens from DeFi services including Dai \cite{Dai}, Chai \cite{Chai}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate) \cite{DSR} or Compound \cite{Compound} to cite a few.
+An AntReview, issued by an author would be seen as a poll, a container where Anters can stake Ether or ERC20 tokens from DeFi services including Dai \cite{Dai}, Chai \cite{Chai}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate) \cite{DSR} or Compound \cite{Compound} to cite a few.
  An AntsReview DAO could be formed in the future to allow ANTS stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
 \newline Hive. When Anters make a deposit into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
 \newline This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
